# agent_bus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
.claude/: settings.json
documents/: client_sdk.md  implementation_plan.md  technical_architecture.md
sdk/javascript/: README.md  package.json
sdk/javascript/examples/: browser.html  node-basic.mjs  outlier-kill.mjs
sdk/javascript/src/: agent-bus-client.js
sdk/javascript/test/: gateway-pubsub.test.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/agent_bus_client/: __init__.py  bus.py  client.py  envelope.py  workflow.py
sdk/python/examples/: basic.py  outlier_kill.py
sdk/python/tests/: test_busclient.py  test_gateway_pubsub.py
src/agent_bus/: __init__.py  actor.py  app.py  bus.py  cleanup.py  config.py  discovery.py  envelope.py  gateway.py  reaper.py  registry.py
src/agent_bus/actors/: __init__.py  echo_agent.py  echo_tool.py
tests/: test_envelope.py  test_integration.py  test_registry.py
webclient/: app.js  index.html  styles.css
